feat: import csv for categories
