# src/modules/cars/useCases/importCategory/ImportCategoryController.ts
@@ -1,0 +1,16 @@
+import { Request, Response } from 'express';
+import { container } from 'tsyringe';
+
+import { ImportCategoryUseCase } from './ImportCategoryUseCase';
+
+export class ImportCategoryController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { file } = request;
+
+    const importCategoryUseCase = container.resolve(ImportCategoryUseCase);
+
+    const categories = await importCategoryUseCase.execute(file);
+
+    return response.json();
+  }
+}
