# src/shared/infra/http/routes/categories.routes.ts
@@ -1,13 +1,22 @@
 import { Router } from 'express';
+import multer from 'multer';
 
-import { CreateCategoryController } from '@modules/cars/useCases/createCategory/CreateCategoryController';
-import { ListCategoriesController } from '@modules/cars/useCases/listCategories/ListCategoriesController';
+import { createCategoryController } from '@modules/cars/useCases/createCategory';
+import { importCategoryController } from '@modules/cars/useCases/importCategory';
+import { listCategoriesController } from '@modules/cars/useCases/listCategories';
+
+const upload = multer({
+  dest: './tmp',
+});
 
 const categoriesRouter = Router();
-const createCategoryController = new CreateCategoryController();
-const listCategoriesController = new ListCategoriesController();
 
 categoriesRouter.post('/', createCategoryController.handle);
 categoriesRouter.get('/', listCategoriesController.handle);
+categoriesRouter.post(
+  '/import',
+  upload.single('file'),
+  importCategoryController.handle,
+);
 
 export { categoriesRouter };
