# src/shared/infra/http/swagger.json
@@ -103,6 +103,34 @@
         }
       }
     },
+    "/categories/import": {
+      "post": {
+        "tags": [
+          "Categories"
+        ],
+        "description": "Import a csv file to upload categories",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Import categories successfully"
+          }
+        }
+      }
+    },
     "/specifications": {
       "post": {
         "tags": [
